# NULAPACK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  meson.build  pyproject.toml
.github/workflows/: ci.yml
interface/: CMakeLists.txt  gauss-seidel.h
interface/cpp/: CMakeLists.txt  Jacobi.h
interface/python/: __init__.py  cholesky.py  gauss_seidel.py  meson.build  thomas.py
src/: CMakeLists.txt  cgegssv.f  cgegsv.f  cgejsv.f  cgssv.f  cgttsv.f  cpoctrf.f  dgegssv.f  dgegsv.f  dgejsv.f  dgssv.f  dgttsv.f  dpoctrf.f  sgegssv.f  sgegsv.f  sgejsv.f  sgssv.f  sgttsv.f  spoctrf.f  zgegssv.f  zgegsv.f  zgejsv.f  zgssv.f  zgttsv.f  zpoctrf.f
tests/: test_gauss_seidel.c  test_gauss_seidel.cpp  test_gauss_seidel.py  test_jacobi.py  utils.h
tests/cpp/: CMakeLists.txt  test_gauss_seidel.cpp  test_jacobi.cpp
tests/python/: test_cholesky.py  test_gauss_seidel.py  test_jacobi.py  test_thomas.py
